--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     <div class="container">
       <div class="one">
         <h1 class="one">
-          Hey
-          <span id="name">name</span>
+          Hey Dumboo!!💌🤍
         </h1>
         <p class="two" id="greetingText">I really like your name btw!</p>
       </div>
